[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy>1.22']

[project]
name = "mesas"
version = "v1.20240709"
description = "MESAS - Multiscale Estimation of StorAge Selection."
readme = "README.md"
authors = [
  {email = "charman1@jhu.edu"},
  {name = "Ciaran J. Harman"}
]
maintainers = [
  {email = "charman1@jhu.edu"},
  {name = "Ciaran J. Harman"}
]
keywords = [
  "hydrology",
  "SAS",
  "Storage selection functions",
]
license = {file = "LICENSE.txt"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
  "matplotlib>=3.3.0",
  "numpy>1.22",
  "pandas>=1.1.0",
  "pytest>=6.0.1",
  "scipy>=1.3.1",
]

[project.urls]
homepage = "https://mesas.readthedocs.io/"
documentation = "https://mesas.readthedocs.io/"
repository = "https://github.com/charman2/mesas"

[tool.pytest.ini_options]
testpaths = ["mesas/test"]
